# modules

./: .clang-format  .gitignore  .gitmodules  Jenkinsfile  LICENSE  README.md  methane.inv
medvis/dicom/: CMakeLists.txt  readme.md
medvis/dicom/data/workspaces/: dicom_image_export.inv  dicom_tag_extractor.inv
medvis/dicom/ext/gdcm/: CMakeLists.txt
medvis/dicom/src/: dicommodule.cpp  errorlogging.cpp
medvis/dicom/src/datastructures/: dicomdirtypes.cpp
medvis/dicom/src/io/: gdcmvolumereader.cpp  mevisvolumereader.cpp
medvis/dicom/src/processors/: dicomimageexport.cpp  dicomtagextractor.cpp
medvis/dicom/src/utils/: gdcmutils.cpp
misc/c3d/: CMakeLists.txt  depends.cmake  readme.md
misc/c3d/src/: c3dmodule.cpp
misc/c3d/src/datastructures/: c3ddata.cpp  c3ddatatraits.cpp
misc/c3d/src/io/: c3dreader.cpp
misc/c3d/src/ports/: c3dport.cpp
misc/c3d/src/processors/: c3daveragedpositions.cpp  c3dpointalignment.cpp  c3dsource.cpp  c3dtodataframe.cpp  c3dtomesh.cpp  c3dtransformpoints.cpp
misc/graphviz/: CMakeLists.txt  depends.cmake  readme.md
misc/graphviz/src/: graphvizmodule.cpp  graphvizsettings.cpp  graphvizutil.cpp
misc/graphviz/src/processors/: layoutmergetree.cpp
misc/nanovgutils/: CMakeLists.txt  depends.cmake  readme.md
misc/nanovgutils/data/workspaces/: navovg-simple-drawing.inv  navovg-with-picking-drawing.inv
misc/nanovgutils/ext/: CMakeLists.txt
misc/nanovgutils/ext/nanovg/: CMakeLists.txt  nanovg.cpp  nanovg.h  nanovg_gl.cpp  nanovg_gl.h  nanovg_gl_utils.h  nanovg_internal.h  nanovg_pick.cpp  nanovgapidefine.h  nanovgconfig.h
misc/nanovgutils/src/: nanovgcontext.cpp  nanovgutils.cpp  nanovgutilsmodule.cpp
misc/nanovgutils/src/processors/: nanovgexampleprocessor.cpp  nanovgpickingexampleprocessor.cpp  nanovgpickingtestprocessor.cpp
misc/nanovgutils/src/properties/: nanovgfontproperty.cpp
misc/openmesh/: CMakeLists.txt  depends.cmake  readme.md
misc/openmesh/data/workspaces/: mesh-decimation.inv
misc/openmesh/docs/: namespaces.dox
misc/openmesh/ext/: CMakeLists.txt
misc/openmesh/src/: openmeshmodule.cpp  openmeshreader.cpp  openmeshwriter.cpp
misc/openmesh/src/processors/: meshdecimationprocessor.cpp  meshsequencedecimationprocessor.cpp  trianglestowireframe.cpp  vertexnormals.cpp
misc/openmesh/src/utils/: meshdecimation.cpp  meshiteratorutils.cpp  meshproximity.cpp  openmeshconverters.cpp
misc/openvdb/: CMakeLists.txt  depends.cmake
misc/openvdb/ext/openvdb/: CMakeLists.txt
misc/openvdb/src/: openvdbmodule.cpp  openvdbreader.cpp
misc/ortools/: CMakeLists.txt  readme.md
misc/ortools/src/: ortoolsmodule.cpp
misc/ortools/src/processors/: hungarian.cpp
misc/ortools/tests/unittests/: hungarian-tests.cpp
misc/vtk/: CMakeLists.txt  README.md  depends.cmake  readme.md
misc/vtk/data/tetrameshes/: cube-large.vtk  cube-mid.vtk
misc/vtk/data/workspaces/: vtk-tetrahedral-mesh.inv
misc/vtk/filters/: Contour.xml  XMLDataObjectWriter.xml
misc/vtk/src/: vtkmodule.cpp
misc/vtk/src/datastructures/: volumevtk.cpp  vtkdataset.cpp  vtktetramesh.cpp
misc/vtk/src/datavisualizer/: vtktovolumevisualizer.cpp
misc/vtk/src/ports/: vtkdatasetport.cpp  vtkinport.cpp  vtkoutport.cpp
misc/vtk/src/processors/: imagetovtk.cpp  layertovtk.cpp  volumetovtk.cpp  vtkdatasetinformation.cpp  vtkdatasettovtkimagedata.cpp  vtkdowncastdata.cpp  vtkfilecache.cpp  vtkgenericprocessor.cpp  vtkreader.cpp  vtksource.cpp  vtktodataframe.cpp  vtktoimage.cpp  vtktolayer.cpp  vtktomesh.cpp  vtktotetramesh.cpp  vtktovolume.cpp  vtkunstructuredgridtorectilineargrid.cpp  vtkwriter.cpp
misc/vtk/src/util/: arrayutils.cpp  vtkbufferutils.cpp  vtkdatautils.cpp  vtkoutputlogger.cpp  vtksettings.cpp
misc/vtk/tools/: parsefilter.py
misc/vtk/tools/vtkwrapping/: __init__.py  commandlineargs.py  config.py  configuration.py  cpptemplates.py  exceptions.py  excludedfilters.py  fixes.py  generatefiles.py  missingheaders.py  properties.py  propertytable.py  propertytemplates.py  vtkdata.py  xmlparsing.py
molvis/molvispython/: CMakeLists.txt  depends.cmake  readme.md
molvis/molvispython/bindings/: CMakeLists.txt
molvis/molvispython/bindings/src/: ivwmolvis.cpp  pymolvis.cpp
molvis/molvispython/python/: molviscommon.py  molvisdata.py  xpdb.py
molvis/molvispython/python/processors/: MolecularStructureSource.py
molvis/molvispython/src/: molvispythonmodule.cpp
molvis/molvispython/tests/unittests/: molvispython-unittest-main.cpp
molvis/vasp/: CMakeLists.txt  depends.cmake  readme.md
molvis/vasp/data/volumes/: ch4.CHGCAR.xz  graphite.CHGCAR.xz
molvis/vasp/data/workspaces/: atlas_graphite.inv  methane.inv
molvis/vasp/python/: vasputil.py
molvis/vasp/python/processors/: chgcarsource.py
molvis/vasp/src/: vaspmodule.cpp
molvis/vasp/src/processors/: chgcarsource.cpp
molvis/vasp/tests/unittests/: vasp-unittest-main.cpp
tensorvis/tensorvisbase/: CMakeLists.txt  depends.cmake  readme.md
tensorvis/tensorvisbase/data/workspaces/: hyperstreamlines.inv  tensor_glyphs.inv  (+2 more)
tensorvis/tensorvisbase/glsl/: eigen.glsl  eigenvaluefield.frag  magnitudefield.frag  quadrender.frag  quadrender.vert  superquadric.geom  tensorfieldtorgba.frag  tensorglyphpicking.frag  tensorlic2d.frag  tensorutil.glsl
tensorvis/tensorvisbase/src/: tensorvisbasemodule.cpp
tensorvis/tensorvisio/: CMakeLists.txt  depends.cmake  readme.md
tensorvis/tensorvisio/src/: tensorvisiomodule.cpp
tensorvis/tensorvispython/: CMakeLists.txt  depends.cmake  readme.md
tensorvis/tensorvispython/bindings/: CMakeLists.txt
tensorvis/tensorvispython/src/: tensorvispythonmodule.cpp
topovis/topologytoolkit/: CMakeLists.txt  depends.cmake  readme.md
topovis/topologytoolkit/docs/: topologytoolkit.qch
topovis/topologytoolkit/src/: topologytoolkitmodule.cpp
topovis/ttk/: CMakeLists.txt  depends.cmake  readme.md
topovis/ttk/filters/: Threshold.xml
topovis/ttk/src/: arrayutils.cpp  ttkmodule.cpp
topovis/ttk/tools/: parsefilter.py
vectorvis/vectorvispython/: CMakeLists.txt  depends.cmake  readme.md
vectorvis/vectorvispython/src/: vectorvispythonmodule.cpp
(+2340 files in other folders)
